cc: Fix OOP-R PaintShader tile offset bug

Converting to a fixed scale PaintShader needs to take into account the
offset in the tile rect.  Previously, this was getting dropped.  It
needs to be scaled, and then subtracted from the picture that we replay
into.

Bug: 855292
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: Icac412c29540c5c453dbd642567de2dda3b97523
Reviewed-on: https://chromium-review.googlesource.com/1115958
Reviewed-by: Khushal <khushalsagar@chromium.org>
Commit-Queue: enne <enne@chromium.org>
Cr-Commit-Position: refs/heads/master@{#570601}
Former-commit-id: c4bdc13e7795add33373622ac7ea5ac298dd026d